--- a/lookup/templates/base.html
+++ b/lookup/templates/base.html
@@ -10,6 +10,26 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
 
     <title>Hello, world!</title>
+    <style>
+    	.good {
+    		background-color: #0C0;
+    	}
+    	.moderate {
+    		background-color: #FFFF00;
+    	}
+    	.usg {
+    		background-color: #FF9900;
+    	}
+    	.unhealthy {
+    		background-color: #FF0000;
+    	}
+    	.veryunhealthy {
+    		background-color: #990066;
+    	}
+    	.hazardous {
+    		background-color: #660000;
+    	}
+    </style>	
   </head>
   <body>
 	  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -24,9 +44,10 @@
 	        <a class="nav-link" href="{% url 'about' %}">About Me</a>
 	      </li>	           
 	    </ul>
-	    <form class="form-inline my-2 my-lg-0">
-	      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-	      <button class="btn btn-outline-secondary my-2 my-sm-0" type="submit">Search</button>
+	    <form action="{% url 'home' %}" class="form-inline my-2 my-lg-0" method="POST">
+	      {% csrf_token %}	
+	      <input class="form-control mr-sm-2" type="search" placeholder="Enter Zipcode" aria-label="Search" name="zipcode">
+	      <button class="btn btn-outline-secondary my-2 my-sm-0" type="submit">Lookup</button>
 	    </form>
 	  </div>
 </nav>
