--- a/lookup/templates/home.html
+++ b/lookup/templates/home.html
@@ -2,6 +2,35 @@
 
 {% block content %}
 
-	<h1>Hello World!</h1>
+	<br/>
 
+	{% if zipcode %}
+		{{ zipcode }}
+	{% endif %}	
+
+	{% if api %}
+
+		{% if api == "Error..." %}
+			There was an error, please try again...
+		{% else %}	
+			
+			<div class="jumbotron {{ category_color }}">
+			  <h1 class="display-4"> {{ api.0.Category.Name }} </h1>
+			  <p class="lead">Current {{ api.0.ReportingArea }} Air Quality: {{ api.0.AQI }}</p>
+			  
+			  <p>{{ category_description }}</p>
+
+			</div>
+			
+			<!--
+			{{ api }}<br/><br/>
+			{{ api.0 }}<br/><br/> 		
+			
+			{{ api.1 }}<br/><br/>
+			 -->
+
+		{% endif %}	
+
+	{% endif %}	
+	
 {% endblock %}
